DefaultWebBrowser: use java.lang.Runtime.exec(String[])
https://github.com/eclipse-platform/eclipse.platform.ui/security/code-scanning/10